prevent full menu wrapping after logo - now wraps before item that exceeds allowed width

--- a/public/styles/app/_layout.scss
+++ b/public/styles/app/_layout.scss
@@ -172,6 +172,11 @@ body {
   padding-top: 16px;
   padding-bottom: 23px;
 }
+@media (min-width: $grid-float-breakpoint) {
+	.navbar-nav {
+	  float: none; // prevent wrap after logo
+	}
+}
 
 
 // collapsable list group
